init home activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tepav</string>
+    <string name="date">DD Month YYYY</string>
+    <string name="time">HH:mm:ss</string>
 </resources>
