--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="date">DD Month YYYY</string>
     <string name="time">HH:mm:ss</string>
     <string name="device_name">Device 00</string>
+    <string name="default_notification_channel_id">channelMain</string>
 </resources>
