--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="status">Status</string>
     <string name="tidak_ada_paket_hari_ini">Tidak ada paket hari ini</string>
     <string name="belum_ada_perangkat_yang_terhubung">Belum ada perangkat yang terhubung.</string>
+    <string name="copyright">Copyright Ⓒ Gradien.co - 2020</string>
+    <string name="slogan">Tempat Paket Anti-Virus</string>
 </resources>
